--- a/src/pages/sol/torsion.astro
+++ b/src/pages/sol/torsion.astro
@@ -42,7 +42,7 @@ import Enumerate from "../../components/Enumerate.astro"
     </ul>
 </div>
     
-<Section title="Torsion">
+<Section title="Torsion" id="torsion">
 
 <strong>Torsion</strong> refers to the twisting of a specimen when it is loaded by couples (or <strong>moments</strong>) that produce rotation about the longitudinal axis. Applications include aircraft engines, car transmissions, and bicycles, etc.
 
