--- a/src/pages/sol/torsion.astro
+++ b/src/pages/sol/torsion.astro
@@ -202,7 +202,7 @@ From observation:
 
 <strong>Ductile </strong>materials generally fail in shear
 
-<Image src="/Solid_Mechanics/Torsion-Figures/ductile.png" width="6"> From reference pages</Image>
+<Image src="/Solid_Mechanics/Torsion-Figures/ductile.png" width="6"> </Image>
 
 <!-- \begin{multicols}{2} -->
 <Row>
@@ -214,7 +214,7 @@ From observation:
  
  <strong>Brittle</strong> materials are weaker in tension than shear
 
-<Image src="/Solid_Mechanics/Torsion-Figures/brittle.png" width="6"> From reference pages</Image>
+<Image src="/Solid_Mechanics/Torsion-Figures/brittle.png" width="6"> </Image>
 
 <!-- \begin{multicols}{2} -->
 <Row>
