can now remove button on warning elements

--- a/src/pages/sol/stress_transformation.astro
+++ b/src/pages/sol/stress_transformation.astro
@@ -62,7 +62,7 @@ The general state of stress at a point is characterized by three independent nor
 <DisplayEquation equation="T = \\begin{bmatrix} \\sigma_{x} & \\tau_{xy} & \\tau_{xz} \\\\ \\tau_{xy} & \\sigma_{y} & \\tau_{yz} \\\\ \\tau_{xz} & \\tau_{yz} & \\sigma_{z} \\end{bmatrix}" title="Stress tensor." background="True" />
 
 
-<Warning title="Stress is a physical quantity and as such, it is independent of the chosen coordinate system." id="str-ind">
+<Warning title="Stress is a physical quantity and as such, it is independent of the chosen coordinate system." id="str-ind" remove_button="true">
 
  </Warning>
 
