ok it all should work

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -186,7 +186,7 @@
     <div class="site-footer show-empty" data-value="">
         <div class="container-fluid maxwidth1140">
             <div class="row justify-content-between">
-                <div class="col-12 col-md-6 mb-5 mb-md-0">;
+                <div class="col-12 col-md-6 mb-5 mb-md-0">
                     <h2 class="site-title"><a href="https://mechse.illinois.edu" aria-label="Mechanical Science &amp; Engineering">Mechanical Science &amp; Engineering</a></h2>
                     <div class="il-footer-social mb-4">
                         <ul>
