--- a/src/pages/sol/shear_moment_diagrams.astro
+++ b/src/pages/sol/shear_moment_diagrams.astro
@@ -10,7 +10,7 @@ import InlineEquation from "../../components/InlineEquation.astro"
 <Layout title="Shear Moment Diagrams">
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'>
-            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#internal_forces'>Internal Forces</a></li>  
+            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#shear_moment_diagrams'>Internal Forces</a></li>  
             <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#sign_conventions'>Sign Conventions</a></li> 
             <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#general_procedure'>General Procedure</a></li>
             <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#general_rules'>General Rules</a></li>
@@ -18,7 +18,7 @@ import InlineEquation from "../../components/InlineEquation.astro"
       </div>
 
 <Section title="Shear Moment Diagrams" id="vm_diagrams"></Section>
-<SubSection title="Internal Forces" id="internal_forces">
+<SubSection title="Internal Forces" id="shear_moment_diagrams">
 <p>
 Internal forces of a member can be determined by creating an imaginary cut in a member, and then solving for the internal shear force, normal force, and bending moment (which, after the cut, become "external" forces that can be solved for). 
 </p>
