--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -338,7 +338,7 @@ import Searchbar from "./Searchbar.astro";
                             <li><a href="/sta/reaction_forces?origin=sidebar">Reaction Forces</a></li>
                             <li><a href="/sta/trusses?origin=sidebar">Trusses</a></li>
                             <li><a href="/sta/frames_and_machines?origin=sidebar">Frames and Machines</a></li>
-                            <li><a href="/sta/internal_forces?origin=sidebar">Shear Force & Bending Moment Diagrams</a></li>
+                            <li><a href="/sta/shear_moment_diagrams?origin=sidebar">Shear Force & Bending Moment Diagrams</a></li>
                             <li><a href="/sta/friction?origin=sidebar">Friction</a></li>
                             <li><a href="/sta/centers_of_mass?origin=sidebar">Center of Mass</a></li>
                             <li><a href="/sta/hydrostatic_fluid_pressure?origin=sidebar">Hydrostatic Fluid Pressure</a></li>
