int mohrs circle

--- a/src/pages/sol/stress_transformation.astro
+++ b/src/pages/sol/stress_transformation.astro
@@ -184,12 +184,35 @@ Normal and shear stresses can be shown graphically as a function of <InlineEquat
   
   <SubSubSection title="Interactive Mohr's circle" id="circle-anim">
   
-    <p>
-      The stress element below is plotted on Mohr’s circle as shown in the left image. The right image shows the new orientation of the stress element. Use the slider below to change the angle and see the resulting normal and shear stresses on Mohr’s circle.
-    </p>
-    <Image src="/Solid_Mechanics/Stress Transformation-Figures/mohrs_demo.png" width="3">
-  
-    </Image>
+    <Example id="int-mrh" title="Interactive Mohr's circle" solution="True">
+      <div class="d-flex flex-row">
+        <Row>
+          <Col values="4 md-5">
+            <p>
+              The stress element below is plotted on Mohr’s circle as shown in the left image. The right image shows the new orientation of the stress element. 
+              Use the slider below to change the angle and see the resulting normal and shear stresses on Mohr’s circle. 
+              
+              <br>
+              </p>
+          </Col>
+          <Col values="8 md-5">
+            <Image src="/Solid_Mechanics/Stress Transformation-Figures/mohrs_demo.png" width="5"></Image>
+          
+          </Col>
+        </Row>
+          
+        </div>
+      </div>
+      <div slot="solution">
+          <p>
+                    
+
+            <Image src="/Solid_Mechanics/Stress Transformation-Figures/mohrs_demo_solution.png" width="7"></Image>
+            
+            </p>
+      </div>
+    </Example>
+    
   <div class="row">
     <Col values="0 md-1 lg-2"></Col>
     <Col values="12 md-10 lg-8">
