--- a/src/pages/sol/stress_transformation.astro
+++ b/src/pages/sol/stress_transformation.astro
@@ -190,7 +190,7 @@ Normal and shear stresses can be shown graphically as a function of <InlineEquat
           <Col values="4 md-5">
             <p>
               The stress element below is plotted on Mohr’s circle as shown in the left image. The right image shows the new orientation of the stress element. 
-              Use the slider below to change the angle and see the resulting normal and shear stresses on Mohr’s circle. 
+              Use the slider below to change the angle and see the corresponding angle for maximum normal stress and maximum shear stress. 
               
               <br>
               </p>
